<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".blackTeaPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="409dp"
        android:layout_height="321dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="438dp"
        android:background="@color/soft_beige"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/BlackTeaImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.647"
            app:srcCompat="@drawable/blacktea" />

        <ImageView
            android:id="@+id/blackTeaback"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.055"
            app:srcCompat="@drawable/backarrow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/BlakSize"
        android:layout_width="326dp"
        android:layout_height="43dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/BlackTeaDescription"
        app:layout_constraintVertical_bias="0.231">

        <com.google.android.material.chip.Chip
            android:id="@+id/BlackTeaS"
            android:layout_width="95dp"
            android:layout_height="52dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#A77A48"
            android:text="@string/size_small"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.Chip
            android:id="@+id/BlackTeaM"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="#A77A48"
            android:text="@string/size_medium"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.Chip
            android:id="@+id/BlackTeaL"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="#A77A48"
            android:text="@string/size_large"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/BlackTeaSize"
        app:layout_constraintVertical_bias="0.189">

        <com.google.android.material.chip.Chip
            android:id="@+id/BlackTeasuger1"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="#A77A48"
            android:text="@string/sugar_1_2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.Chip
            android:id="@+id/BlackTeasuger2"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="#A77A48"
            android:text="@string/sugar_3_4"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.Chip
            android:id="@+id/BlackTeasuger3"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="#A77A48"
            android:text="@string/sugar_other"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/BlackTeaPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/blacktea_title"
        android:textAlignment="center"
        android:textColor="@color/Dark_Coffee"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/BlackTeaDescription"
        android:layout_width="377dp"
        android:layout_height="64dp"
        android:text="@string/blacktea_description"
        android:textAlignment="textStart"
        android:textColor="#744D30"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BlackTeaPage"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/BlackTeaSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size_label"
        android:textAlignment="center"
        android:textColor="@color/coffee_brown"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/BlakSize"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/BlackTeaDescription"
        app:layout_constraintVertical_bias="0.256" />

    <TextView
        android:id="@+id/BlackTeaSuger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar_label"
        android:textAlignment="center"
        android:textColor="@color/coffee_brown"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/linearLayout9"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/BlackTeaSize"
        app:layout_constraintVertical_bias="0.205" />

    <TextView
        android:id="@+id/BlackTeatotal"
        android:layout_width="153dp"
        android:layout_height="36dp"
        android:background="@color/coffee_brown"
        android:text="@string/total_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
        app:layout_constraintVertical_bias="0.238" />

    <TextView
        android:id="@+id/BlackTeaprice"
        android:layout_width="151dp"
        android:layout_height="36dp"
        android:background="@color/coffee_brown"
        android:text="Rs. 900.00"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
        app:layout_constraintVertical_bias="0.238" />

    <Button
        android:id="@+id/BlackTeaAddtocart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#594430"
        android:text="@string/add_to_cart"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BlackTeatotal"
        app:layout_constraintVertical_bias="0.372" />

</androidx.constraintlayout.widget.ConstraintLayout>